--- a/hw3_page2.html
+++ b/hw3_page2.html
@@ -35,6 +35,9 @@
     </ul>
 
     <div class="space"> </div>
+    <h3 style="text-align: center;color:rgb(33, 36, 192)">
+        What we do:
+    </h3>
     <div class="center">
         <h4 style="color:rgb(236, 16, 16);size: 100px; text-align: center;">We cut your lawn<br><br>We cut your lawn<br><br>We cut your lawn<br><br>We cut your lawn<br><br>We cut your lawn
             <br><br>We cut your lawn<br><br>We cut your lawn<br><br>We cut your lawn<br><br>We cut your lawn<br><br></h4>
