--- a/hw3_page2.html
+++ b/hw3_page2.html
@@ -35,7 +35,7 @@
     </ul>
 
     <div class="space"> </div>
-    <h3 style="text-align: center;color:rgb(33, 36, 192)">
+    <h3 style="text-align: center;color:rgb(33, 36, 192); padding-bottom: 0%;">
         What we do:
     </h3>
     <div class="center">
